fix: Adjust balance alignment in safe list (#4286)

--- a/src/components/welcome/MyAccounts/styles.module.css
+++ b/src/components/welcome/MyAccounts/styles.module.css
@@ -81,7 +81,14 @@
 .safeLink {
   display: grid;
   padding: var(--space-2) var(--space-1) var(--space-2) var(--space-2);
-  grid-template-columns: 60px 3fr 3fr 2fr;
+  grid-template-columns: 60px 3fr 3fr minmax(auto, 2fr);
+  align-items: center;
+}
+
+.safeSubLink {
+  display: grid;
+  padding: var(--space-2) var(--space-1) var(--space-2) var(--space-2);
+  grid-template-columns: 60px 3fr minmax(auto, 2fr);
   align-items: center;
 }
 
